# jirehs-agent

./: .env.example  .gitignore  AGENTS.md  BRUNO.md  CLAUDE.md  CONVERSATIONAL_AGENT_IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  docker-compose.yml  ingest_pipeline_explanation.md  justfile  list-papers-tool.md  postman_collection.json
backend/: .env.example  AGENT_REFACTOR_PLAN.md  Dockerfile  README.md  alembic.ini  pyproject.toml  test_middleware.py
backend/alembic/: env.py
backend/alembic/versions/: 20241214_initial_schema.py  20241215_add_timezone_to_timestamps.py  20241216_add_conversations.py  20241217_add_agent_executions.py
backend/src/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
backend/src/clients/: __init__.py  arxiv_client.py  base_llm_client.py  embeddings_client.py  openai_client.py  zai_client.py
backend/src/factories/: __init__.py  client_factories.py  service_factories.py
backend/src/middleware/: __init__.py  error_handler.py  logging.py  transaction.py
backend/src/models/: __init__.py  agent_execution.py  chunk.py  conversation.py  ingestion_log.py  paper.py
backend/src/repositories/: __init__.py  agent_execution_repository.py  chunk_repository.py  conversation_repository.py  paper_repository.py  search_repository.py
backend/src/routers/: __init__.py  ask.py  ask_agent.py  ask_agentic.py  conversations.py  health.py  ingest.py  papers.py  search.py  stream.py
backend/src/schemas/: __init__.py  ask.py  ask_agent.py  ask_agentic.py  common.py  conversation.py  errors.py  health.py  ingest.py  langgraph_state.py  papers.py  search.py  stream.py
backend/src/services/: __init__.py  agentic_rag_service.py  arxiv_client.py  embeddings_client.py  ingest_service.py  openai_client.py  pdf_parser.py  search_service.py
backend/src/services/agent_service/: __init__.py  context.py  edges.py  graph_builder.py  prompts.py  security.py  service.py  tools.py
backend/src/services/agent_service/nodes/: __init__.py  executor.py  generation.py  grading.py  guardrail.py  out_of_scope.py  retrieval.py  rewrite.py  router.py
backend/src/services/agent_service/tools/: __init__.py  arxiv_search.py  base.py  explore_citations.py  ingest.py  list_papers.py  registry.py  retrieve.py  summarize_paper.py  utils.py  web_search.py
backend/src/services/factories/: __init__.py  client_factories.py  service_factories.py
backend/src/utils/: __init__.py  chunking_service.py  logger.py  pdf_parser.py
backend/tests/: conftest.py
backend/tests/test_services/test_agent_service/: test_edges.py  test_executor.py  test_guardrail.py  test_list_papers.py
bruno/: README.md  bruno.json
bruno/Ask/: Ask Agent (Advanced Parameters).bru  Ask Agent (Basic) copy.bru  Ask Agent (Basic).bru  Ask Agent (Conversation Continuity).bru  Ask Agent (OpenAI).bru  Ask Agent (Z.AI).bru
bruno/Health/: Health Check.bru
bruno/Ingest/: Ingest Papers (Advanced).bru  Ingest Papers (Basic).bru  Ingest Papers (Force Reprocess).bru
bruno/Papers/: Delete Paper.bru  Get Paper by arXiv ID.bru  List Papers with Filters.bru  List Papers.bru
bruno/Root/: API Information.bru
bruno/Search/: Full-Text Search.bru  Hybrid Search.bru  Search with Filters.bru  Vector Search.bru
frontend/: .env.example  CHAT_IMPLEMENTATION_PLAN.md  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  conversations.ts  stream.ts
(+46 files in other folders)
