[project]
name = "arxiv-rag-system"
version = "0.1.0"
description = "Agentic RAG system for arXiv papers with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    
    # Database
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    "pgvector>=0.3.4",
    
    # AI/ML
    "openai>=1.54.3",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.5",
    "langchain-core>=0.3.15",
    "langgraph>=0.2.45",
    "langfuse>=2.52.2",
    
    # HTTP Client
    "httpx>=0.27.2",
    
    # PDF Processing
    "docling>=2.7.0",
    "pypdf>=5.0.1",
    
    # arXiv
    "arxiv>=2.1.3",
    
    # Utilities
    "python-multipart>=0.0.12",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    
    # Development
    "black>=24.10.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
