[project]
name = "jirehs-agent-system"
version = "0.1.0"
description = "Jireh's Agent system for arXiv papers with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    
    # Database
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    "pgvector>=0.3.4",
    
    # AI/ML
    "openai>=1.54.3",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.5",
    "langchain-core>=0.3.15",
    "langgraph>=0.2.45",
    
    # HTTP Client
    "httpx>=0.27.2",
    
    # PDF Processing
    "docling>=2.7.0",
    "pypdf>=5.0.1",
    
    # arXiv
    "arxiv>=2.1.3",
    
    # Utilities
    "python-multipart>=0.0.12",
    "tenacity>=9.0.0",
    
    # Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    
    # Development
    "ruff>=0.7.4",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
# Downgrade false positives from FastAPI/LangChain/SQLAlchemy type stubs to warnings
reportArgumentType = "warning"
reportAttributeAccessIssue = "warning"
reportCallIssue = "warning"
reportGeneralTypeIssues = "warning"
reportReturnType = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
